--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -91,12 +91,14 @@
     </div>
 </div>
 
+<!-- Перед закрывающим тегом </body> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/auth.js"></script>
-<script src="/js/login.js"></script>
-<script src="/js/userService.js"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', updateAuthUI);
+    document.addEventListener('DOMContentLoaded', async () => {
+        await updateAuthUI();
+    });
 </script>
+
 </body>
 </html>
