--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -16,15 +16,16 @@
                     <h3 class="card-title text-center mb-4">Вход в систему</h3>
                     <form id="loginForm" onsubmit="handleLogin(event)">
                         <div class="mb-3">
-                            <label class="form-label">Имя пользователя</label>
-                            <input type="text" class="form-control" name="username" required>
+                            <label for="username" class="form-label">Имя пользователя</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Пароль</label>
-                            <input type="password" class="form-control" name="password" required>
+                            <label for="password" class="form-label">Пароль</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Войти</button>
+                        <button type="submit" class="btn btn-primary">Войти</button>
                     </form>
+
                     <div class="text-center mt-3">
                         <p>Нет аккаунта? <a href="/register.html">Зарегистрироваться</a></p>
                         <a href="/index.html" class="text-decoration-none">Вернуться на главную</a>
@@ -36,8 +37,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="js/auth.js"></script>
-<script type="module" src="js/auth-service.js"></script>
-<script type="module" src="js/login.js"></script>
+<script src="js/auth.js"></script>
+
 </body>
 </html>
