--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -13,10 +13,10 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/static">Главная</a>
+                    <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/services.htmlvices.html">Услуги</a>
+                    <a class="nav-link" href="/services.html">Услуги</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/profile.html">Профиль</a>
