--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -26,9 +25,14 @@
                 </li>
             </ul>
         </div>
+        <div id="auth-buttons">
+            <a class="dropdown-item" href="/login.html" onclick="handleLogout(); return false;">Выход</a>
+        </div>
+
     </div>
 </nav>
 
+<!-- Добавляем контейнер для контента -->
 <div class="container mt-4">
     <div id="content-area"></div>
 </div>
