--- a/src/main/resources/static/appointment.html
+++ b/src/main/resources/static/appointment.html
@@ -9,7 +9,46 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- Такой же навбар как в index.html -->
+    <div class="container">
+        <a class="navbar-brand" href="/">Beauty Salon</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services.html">Услуги</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/masters.html">Мастера</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/reviews.html">Отзывы</a>
+                </li>
+            </ul>
+            <div id="auth-buttons">
+                <a href="/login.html" class="btn btn-outline-light me-2">Вход</a>
+                <a href="/register.html" class="btn btn-light">Регистрация</a>
+            </div>
+
+            <div id="user-menu" style="display: none;">
+                <div class="dropdown">
+                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                        Личный кабинет
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/profile.html">Профиль</a></li>
+                        <li><a class="dropdown-item" href="/appointments.html">Мои записи</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" onclick="handleLogout(); return false;">Выход</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </nav>
 
 <div class="container mt-5">
