--- a/src/main/resources/static/master/index.html
+++ b/src/main/resources/static/master/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 <div class="container mt-4">
-    <h1>Панель мастера</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand"></span>
+            <div class="d-flex">
+                <a class="btn btn-outline-danger" href="/login.html" onclick="handleLogout(); return false;">Выход</a>
+            </div>
+        </div>
+    </nav>
+</div>
     <div class="row mt-4">
         <div class="col-md-8">
             <h2>Записи на сегодня</h2>
@@ -25,6 +33,7 @@
             <div id="all-appointments"></div>
         </div>
     </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
