--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/static">Салон красоты</a>
+        <a class="navbar-brand" href="/">Салон красоты</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -34,6 +34,10 @@
                     <h5 class="card-title">Информация о профиле</h5>
                     <div id="profile-info">
 
+                    </div>
+                    <div class="mt-3">
+                        <input type="file" id="photo-upload" accept="image/jpeg,image/jpg" style="display: none;">
+                        <button class="btn btn-primary" onclick="document.getElementById('photo-upload').click()">Загрузить фото</button>
                     </div>
                 </div>
             </div>
