--- a/src/main/resources/static/services.html
+++ b/src/main/resources/static/services.html
@@ -9,7 +9,24 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- Такой же навбар как в index.html -->
+    <div class="container">
+        <a class="navbar-brand" href="/">Beauty Salon</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Главная</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/services.html">Услуги</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/masters.html">Мастера</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/reviews.html">Отзывы</a>
+        </li>
 </nav>
 
 <div class="container mt-5">
