--- a/src/main/resources/static/system-admin/index.html
+++ b/src/main/resources/static/system-admin/index.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/system-admin/appointments">Записи</a>
+                    <a class="nav-link" href="/system-admin/index.html">Записи</a>
                 </li>
             </ul>
 
